--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -124,6 +124,9 @@
   <data name="gradience" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\gradience.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="close_256_icon-icons.com_75990" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\close_256_icon-icons.com_75990.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="3643766-album-image-landscape-photo-photos-picture_113407" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\3643766-album-image-landscape-photo-photos-picture_113407.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -151,7 +154,7 @@
   <data name="lupa" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\lupa.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="close_256_icon-icons.com_75990" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\close_256_icon-icons.com_75990.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="imprimir-sinal-de-ferramenta-de-interface-preenchida" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\imprimir-sinal-de-ferramenta-de-interface-preenchida.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
