--- a/frmTelaInicial.pt-BR.resx
+++ b/frmTelaInicial.pt-BR.resx
@@ -136,10 +136,10 @@
     <value>True</value>
   </data>
   <data name="toolStsStripSistemVersion.Size" type="System.Drawing.Size, System.Drawing">
-    <value>1896, 20</value>
+    <value>1857, 20</value>
   </data>
   <data name="toolStsStripSistemVersion.Text" xml:space="preserve">
-    <value>Versão  do Sistema: 0.3.2</value>
+    <value>Versão  do Sistema: 0.3.3</value>
   </data>
   <data name="toolStsStripSistemVersion.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
     <value>MiddleRight</value>
@@ -175,10 +175,16 @@
     <value>Cadastro</value>
   </data>
   <data name="MenuStripNovosEmprestimos.Size" type="System.Drawing.Size, System.Drawing">
-    <value>245, 26</value>
+    <value>252, 26</value>
   </data>
   <data name="MenuStripNovosEmprestimos.Text" xml:space="preserve">
     <value>Novos Emprestimos</value>
+  </data>
+  <data name="recebimentoDeParcelaToolStripMenuItem.Text" xml:space="preserve">
+    <value>Recebimento de Parcela</value>
+  </data>
+  <data name="visualizarEmprestimosToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>252, 26</value>
   </data>
   <data name="visualizarEmprestimosToolStripMenuItem.Text" xml:space="preserve">
     <value>Visualizar Emprestimos</value>
