--- a/frmTelaInicial.pt-BR.resx
+++ b/frmTelaInicial.pt-BR.resx
@@ -136,10 +136,10 @@
     <value>True</value>
   </data>
   <data name="toolStsStripSistemVersion.Size" type="System.Drawing.Size, System.Drawing">
-    <value>1896, 20</value>
+    <value>1857, 20</value>
   </data>
   <data name="toolStsStripSistemVersion.Text" xml:space="preserve">
-    <value>Versão  do Sistema: 0.4.1</value>
+    <value>Versão  do Sistema: 0.4.2</value>
   </data>
   <data name="toolStsStripSistemVersion.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
     <value>MiddleRight</value>
@@ -194,6 +194,9 @@
   </data>
   <data name="MenuStripRelatoriosVisuEmprestimos.Text" xml:space="preserve">
     <value>Visualizar Emprestimos</value>
+  </data>
+  <data name="visualizarParcelasToolStripMenuItem.Text" xml:space="preserve">
+    <value>Visualizar Parcelas</value>
   </data>
   <data name="MenuStripRelatoriosEmprestimos.Size" type="System.Drawing.Size, System.Drawing">
     <value>178, 26</value>
