--- a/frmTelaInicial.pt-BR.resx
+++ b/frmTelaInicial.pt-BR.resx
@@ -136,10 +136,10 @@
     <value>True</value>
   </data>
   <data name="toolStsStripSistemVersion.Size" type="System.Drawing.Size, System.Drawing">
-    <value>1857, 20</value>
+    <value>1896, 20</value>
   </data>
   <data name="toolStsStripSistemVersion.Text" xml:space="preserve">
-    <value>Versão  do Sistema: 0.5.2</value>
+    <value>Versão  do Sistema: 0.5.3</value>
   </data>
   <data name="toolStsStripSistemVersion.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
     <value>MiddleRight</value>
@@ -174,8 +174,14 @@
   <data name="MenuStripCadastro.Text" xml:space="preserve">
     <value>Cadastro</value>
   </data>
+  <data name="MenuStripNovosEmprestimos.Size" type="System.Drawing.Size, System.Drawing">
+    <value>239, 26</value>
+  </data>
   <data name="MenuStripNovosEmprestimos.Text" xml:space="preserve">
     <value>Novos Emprestimos</value>
+  </data>
+  <data name="pagamentoDeParcelaToolStripMenuItem.Text" xml:space="preserve">
+    <value>Pagamento de Parcela</value>
   </data>
   <data name="MenuStripEmprestimos.Size" type="System.Drawing.Size, System.Drawing">
     <value>178, 26</value>
